csrf protection added + breadcrumbs overlay

--- a/templates/base_scripts.html
+++ b/templates/base_scripts.html
@@ -14,8 +14,6 @@
   <script src="/static/libs/fastclick.js"></script>
   <!-- AdminLTE App -->
   <script src="/static/libs/adminlte.min.js"></script>
-  <script src="/static/libs/demo.js"></script>
+
   <script src="/static/js/ajtst.js"></script>
-  <script>$('li a').click(function(){
-            $('li a').removeClass("active");
-            $(this).addClass("active");});</script>
+  <script src="/static/js/csrf_protection.js"></script>
