--- a/templates/base_site.html
+++ b/templates/base_site.html
@@ -22,6 +22,8 @@
        folder instead of downloading all of them to reduce the load. -->
   <link rel="stylesheet" href="/static/styles/_all-skins.min.css">
 
+  <link rel="stylesheet" href="/static/styles/breadcrumb_overlay.css">
+
   <!-- Specific CSS goes HERE -->
   {% block stylesheets %}{% endblock stylesheets %}
 
